--- a/templates/prices.html
+++ b/templates/prices.html
@@ -5,218 +5,243 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="../static/js/navbar.js"></script>
   <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/prices.css">
   <title>Settler - Prices</title>
 </head>
 
 <body>
+  <div class="container">
+    <nav>
+      <div class="logo">
+        <img class="logo_img2" src="../static/images/logo.png    " alt="settler logo">
+      </div>
+      <div class="topnav">
+        <a href="#home" class="active">Menu</a>
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
 
-  <div class="stripe">
-    <table id="transportation">
-      <caption>Transportation</caption>
-      <tr>
-        <th>Item</th>
-        <th>Average Price</th>
+    </nav>
+    <div class="content">
 
-      </tr>
-      <tr>
-        <td>🚌 Bus</td>
-        <td>2</td>
 
-      </tr>
-      <tr>
-        <td>🚗 Car</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🚕 Taxi</td>
-        <td>2</td>
+      <div class="stripe">
+        <table id="transportation">
+          <caption>Transportation</caption>
+          <tr>
+            <th>Item</th>
+            <th>Average Price</th>
 
-      </tr>
+          </tr>
+          <tr>
+            <td>🚌 Bus</td>
+            <td>2</td>
 
-      <tr>
-        <td>⛽ Gas</td>
-        <td>2</td>
+          </tr>
+          <tr>
+            <td>🚗 Car</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🚕 Taxi</td>
+            <td>2</td>
 
-      </tr>
-      <tr>
-        <td>⚙️ Mechanic Inspection</td>
-        <td>2</td>
-      </tr>
+          </tr>
 
-    </table>
+          <tr>
+            <td>⛽ Gas</td>
+            <td>2</td>
 
-    <table id="food">
-      <caption>Food</caption>
-      <tr>
-        <th>Item</th>
-        <th>Average Price</th>
+          </tr>
+          <tr>
+            <td>⚙️ Mechanic Inspection</td>
+            <td>2</td>
+          </tr>
 
-      </tr>
-      <tr>
-        <td>🥛 Milk (regular), (1 liter)</td>
-        <td>5.75 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍞 Loaf of Fresh White Bread (500g) </td>
-        <td>7.16 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍚 Rice (white), (1kg) </td>
-        <td>8.67 ₪ </td>
-      </tr>
-      <tr>
-        <td>🥚 Eggs (regular) (12)</td>
-        <td>12.57 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍗 Chicken Breasts (1kg) </td>
-        <td>33.77 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍎 Apples (1kg)</td>
-        <td>9.74 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍊 Oranges (1kg)</td>
-        <td>6.15 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍅 Tomato (1kg)</td>
-        <td>5.28 ₪ </td>
-      </tr>
-      <tr>
-        <td>🧅 Onion (1kg)</td>
-        <td>3.64 ₪ </td>
-      </tr>
-      <tr>
-        <td>🍺 Beer(330cc)</td>
-        <td>31.44 ₪ </td>
-      </tr>
-    </table>
-  </div>
-  <div class="stripe">
-    <table id="government_fees">
-      <caption>Government Fees</caption>
-      <tr>
-        <th>Item</th>
-        <th>Average Price</th>
-      </tr>
-      <tr>
-        <td>📚 ID/Passport Renewal</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>💳 Driving License</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🗣️ Language Courses (ulpan)</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🎫 Parking Ticket</td>
-        <td>2</td>
-      </tr>
-    </table>
+        </table>
 
-    <table id="recreation">
-      <caption>Recreation</caption>
-      <tr>
-        <th>Item</th>
-        <th>Average Price</th>
-      </tr>
-      <tr>
-        <td>🍿 Movie Theater</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>💃 Dance Club</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🏋️‍♂️ Gym Membership</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🍽️ Restaurant</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>💸 Tip</td>
-        <td>2</td>
-      </tr>
-    </table>
-  </div>
-  <div class="stripe">
-    <table id="shopping">
-      <caption>Shopping</caption>
-      <tr>
-        <th>Item</th>
-        <th>Average Price</th>
-      </tr>
-      <tr>
-        <td>👖 Pants</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>👞 Shoes</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>👕 T-Shirt</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🧼 Deodorant</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🦷 Toothpaste</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>💍 Jewlery</td>
-        <td>2</td>
-      </tr>
-    </table>
+        <table id="food">
+          <caption>Food</caption>
+          <tr>
+            <th>Item</th>
+            <th>Average Price</th>
 
-    <table id="appliances">
-      <caption>Appliances</caption>
-      <tr>
-        <th>Item</th>
-        <th>Average Price</th>
+          </tr>
+          <tr>
+            <td>🥛 Milk (regular), (1 liter)</td>
+            <td>5.75 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍞 Loaf of Fresh White Bread (500g) </td>
+            <td>7.16 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍚 Rice (white), (1kg) </td>
+            <td>8.67 ₪ </td>
+          </tr>
+          <tr>
+            <td>🥚 Eggs (regular) (12)</td>
+            <td>12.57 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍗 Chicken Breasts (1kg) </td>
+            <td>33.77 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍎 Apples (1kg)</td>
+            <td>9.74 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍊 Oranges (1kg)</td>
+            <td>6.15 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍅 Tomato (1kg)</td>
+            <td>5.28 ₪ </td>
+          </tr>
+          <tr>
+            <td>🧅 Onion (1kg)</td>
+            <td>3.64 ₪ </td>
+          </tr>
+          <tr>
+            <td>🍺 Beer(330cc)</td>
+            <td>31.44 ₪ </td>
+          </tr>
+        </table>
+      </div>
+      <div class="stripe">
+        <table id="government_fees">
+          <caption>Government Fees</caption>
+          <tr>
+            <th>Item</th>
+            <th>Average Price</th>
+          </tr>
+          <tr>
+            <td>📚 ID/Passport Renewal</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>💳 Driving License</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🗣️ Language Courses (ulpan)</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🎫 Parking Ticket</td>
+            <td>2</td>
+          </tr>
+        </table>
 
-      </tr>
-      <tr>
-        <td>📺 TV</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>💻 Computer</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>📱 Cellphone</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🗄️ Washing Machine</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🧃 Refrigerator</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🛋️ Couch</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>🛏️ Bed</td>
-        <td>2</td>
-      </tr>
-    </table>
+        <table id="recreation">
+          <caption>Recreation</caption>
+          <tr>
+            <th>Item</th>
+            <th>Average Price</th>
+          </tr>
+          <tr>
+            <td>🍿 Movie Theater</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>💃 Dance Club</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🏋️‍♂️ Gym Membership</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🍽️ Restaurant</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>💸 Tip</td>
+            <td>2</td>
+          </tr>
+        </table>
+      </div>
+      <div class="stripe">
+        <table id="shopping">
+          <caption>Shopping</caption>
+          <tr>
+            <th>Item</th>
+            <th>Average Price</th>
+          </tr>
+          <tr>
+            <td>👖 Pants</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>👞 Shoes</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>👕 T-Shirt</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🧼 Deodorant</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🦷 Toothpaste</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>💍 Jewelery</td>
+            <td>2</td>
+          </tr>
+        </table>
+
+        <table id="appliances">
+          <caption>Appliances</caption>
+          <tr>
+            <th>Item</th>
+            <th>Average Price</th>
+
+          </tr>
+          <tr>
+            <td>📺 TV</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>💻 Computer</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>📱 Cellphone</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🗄️ Washing Machine</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🧃 Refrigerator</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🛋️ Couch</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>🛏️ Bed</td>
+            <td>2</td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </body>
 
