--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,26 +10,34 @@ body {
 
 a {
   text-decoration: none;
-  color: black;
-  font-size: larger;
+  color: white;
+  font-size: x-large;
   font-weight: 900;
+}
+
+h1 {
+  font-family: Cooper-Black;
 }
 
 .container {
   display: flex;
-  width: 100vw;
+  background: url("../images/hero-bg.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 100vh;
-  background: linear-gradient(
-    180deg,
-    #ffffff 43.23%,
-    rgba(88, 233, 233, 0.734375) 100%
-  );
+  width: 100vw;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   padding: 1px;
+ 
+}
+
+.content{
+  margin-top: 20vh;
 }
 
 .nav-header {
@@ -42,7 +50,7 @@ a {
 
 .nav-list {
   top: 1px;
-    display: flex;
+  display: flex;
   width: 60vw;
   justify-content: space-between;
 }
@@ -69,28 +77,77 @@ a {
 .logo_img {
   display: block;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  width: 85%;
+  width: 60vw;
+  justify-content: start;
+}
+
+.logo_img2{
+  display: flex;
+  height: auto;
+  width: 30vw;
+  margin-left: 5vw;
   justify-content: start;
 }
 
 .header_text {
   display: flex;
-}
-
-.border {
-  border: 1px solid black;
+  font-family: "domine-bold", sans-serif;
+  font-size: 2rem;
+  line-height: 1.1;
+  margin-top: 5vh;
+  margin-left: auto;
+  margin-right: auto;
+  color: #ffffff;
+  text-align: center;
 }
 
 footer {
   display: flex;
   flex-direction: column;
-  margin-top: 1px;
+  margin-top: 20vh;
   width: 90vw;
   justify-content: space-around;
   align-items: center;
 }
+
+.footer_text{
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+}
+
+.footer_img{
+  width: 20vw;
+}
+
+.sign {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: white;
+  width: 45vw;
+  height: 5vh;
+  margin: 5vh;
+  padding: 1vh 5vw 1vh 5vw;
+  font-size: larger;
+  align-items: center;
+}
+
+.sign a {
+  background-color: cornflowerblue;
+  padding: 1vh 10vw 1vh 10vw;
+  margin: 1vw;
+  white-space: nowrap;
+  opacity: 0.8;
+  transition: ease-in-out 1s;
+  border-radius: 15px;
+}
+.sign :hover {
+  opacity: 1;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 
 .stripe {
   display: flex;
@@ -103,20 +160,64 @@ footer {
   border: 1px solid;
 }
 
-.sign {
-  padding: 1px 55px 1px 55px;
-  margin: 10px;
-  font-size: xx-large;
-  color: white ;
-  background-color: rgb(16, 99, 207);
-  stroke: 1px solid black;
-  border-radius: 10px;
-}
-.sign a{
-    color: white
+
+.fyrebox_quiz{
+  z-index: 100;
 }
 
-.sign h3 {
-  margin: 0;
+
+nav {
+  display: flex;
+  position: fixed;
+  width: 100vw;
+  margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  background-color: rgba(0, 0, 20, 0.3);
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.3);
+  position: relative;
+  width: 10vw;
+  height: fit-content;
+  float: right;
+  border-radius: 25px;
+  margin-right: 1vw;
+  align-self: center;
+
+}
+
+.topnav #myLinks {
+  display: none;
+  float: right;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  color: white;
+}
