--- a/templates/host.html
+++ b/templates/host.html
@@ -5,51 +5,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="../static/js/navbar.js"></script>
   <link rel="stylesheet" href="../static/css/style.css">
   <title>Settler - Host</title>
 </head>
 
 <body>
-
   <div class="container">
-    <form action="{{url_for('create_meal')}}" method="post">
-      <label>First Name:</label>
-      <input type="text" name="first_name" /><br>
-      <label>Last Name:</label>
-      <input type="text" name="last_name" /><br>
-      <label>Age:</label>
-      <input type="number" name="age" min="1" max="100" /><br>
-      <label>Country of Origin:</label>
-      <input type="text" name="country_of_origin" /><br>
-      <label>City:</label>
-      <input type="text" name="city_of_residence" /><br>
-      <label>Address:</label>
-      <input type="text" name="address" /><br>
-      <label>Maximum Number of Guests:</label>
-      <input type="number" name="number_of_guests" min="1" max="10" /><br>
-      <label>Meal Type</label> <br>
-      <select multiple name="meal_type[]">
-        <option value="fish" name="type">Fish</option>
-        <option value="meat" name="type">Meat</option>
-        <option value="milk" name="type">Milk</option>
-        <option value="indian" name="type">Indian</option>
-        <option value="chinese" name="type">Chinese</option>
-        <option value="italian" name="type">Italian</option>
-        <option value="israeli" name="type">Israeli</option>
-        <option value="kosher" name="type">Kosher</option>
-        <option value="vegan" name="type">Vegan</option>
-        <option value="pork" name="type">Pork</option>
+    <nav>
+      <div class="logo">
+        <img class="logo_img2" src="../static/images/logo.png    " alt="settler logo">
+      </div>
+      <div class="topnav">
+        <a href="#home" class="active">Menu</a>
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
 
-      </select><br><br>
+    </nav>
+    <div class="content">
 
-      <h6>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</h6>
+      <form action="{{url_for('create_meal')}}" method="post">
+        <label>First Name:</label>
+        <input type="text" name="first_name" /><br>
+        <label>Last Name:</label>
+        <input type="text" name="last_name" /><br>
+        <label>Age:</label>
+        <input type="number" name="age" min="1" max="100" /><br>
+        <label>Country of Origin:</label>
+        <input type="text" name="country_of_origin" /><br>
+        <label>City:</label>
+        <input type="text" name="city_of_residence" /><br>
+        <label>Address:</label>
+        <input type="text" name="address" /><br>
+        <label>Maximum Number of Guests:</label>
+        <input type="number" name="number_of_guests" min="1" max="10" /><br>
+        <label>Meal Type</label> <br>
+        <select multiple name="meal_type[]">
+          <option value="fish" name="type">Fish</option>
+          <option value="meat" name="type">Meat</option>
+          <option value="milk" name="type">Milk</option>
+          <option value="indian" name="type">Indian</option>
+          <option value="chinese" name="type">Chinese</option>
+          <option value="italian" name="type">Italian</option>
+          <option value="israeli" name="type">Israeli</option>
+          <option value="kosher" name="type">Kosher</option>
+          <option value="vegan" name="type">Vegan</option>
+          <option value="pork" name="type">Pork</option>
 
-      <label>Meal Date</label>
-      <input type="date" name="meal_date"><br>
-      <label>Meal Time</label>
-      <input type="time" name="meal_time">
-      <input type="submit">
-    </form>
+        </select><br><br>
+
+        <h6>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</h6>
+
+        <label>Meal Date</label>
+        <input type="date" name="meal_date"><br>
+        <label>Meal Time</label>
+        <input type="time" name="meal_time">
+        <input type="submit">
+      </form>
+    </div>
   </div>
 
 </body>
