--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
 
-
     <title>Document</title>
 </head>
 
@@ -19,37 +18,38 @@
 
         <div class="header">
             <div class="logo">
-                <img class="logo_img" src="../static/images/Setteler Logo.png" alt="settler logo">
+                <img class="logo_img" src="../static/images/logo.png" alt="settler logo">
             </div>
         </div>
         <div class="header_text">
-            <h2>motto</h2>
+            <h1>Welcome to your
+                New Home.</h1>
         </div>
 
-        <div class="sign_box">
-            <div class="sign">
-                <a>
-                    <h3>Sign in</h3>
-                </a>
-            </div>
-            <div class="sign">
-                <a href="/signup">
-                    <h3>Sign up</h3>
-                </a>
-            </div>
+
+        <div class="sign">
+            <a href="/signin">
+                SIGN IN
+            </a>
+
+            <a href="/signup">
+                SIGN UP
+            </a>
+
         </div>
 
         <footer>
             <div>
-                Avi Barizani - Eric Pinhasovich - Jack E. Civre - Jacky Lalou - Yonatan Salmon
+                <img src="../static/images/footer.png" alt="footer" class="footer_img">
                 <hr />
             </div>
-            <div>
+            <div class="footer_text">
                 ITC Hackathon - Hack for good 2020
             </div>
         </footer>
 
     </div>
+ 
 </body>
 
 </html>
