--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="../static/js/navbar.js"></script>
     <title>Settler</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/quiz.css">
@@ -15,42 +16,57 @@
 <body>
     <div class="container">
         <nav>
+            <div class="logo">
+                <img class="logo_img2" src="../static/images/logo.png    " alt="settler logo">
+            </div>
+            <div class="topnav">
+                <a href="#home" class="active">Menu</a>
+                <div id="myLinks">
+                    <a href="#news">News</a>
+                    <a href="#contact">Contact</a>
+                    <a href="#about">About</a>
+                </div>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
 
         </nav>
+        <div class="content">
 
-        <div class="quiz">
+            <div class="quiz">
 
-            <div class="quiz_1">
-                <button onclick="window.location.href = '/quiz/language';">
-                    <h1 class=" quiz_name">
-                        Language Quiz
-                    </h1>
-                </button>
-            </div>
-            <div class="quiz_2">
-                <button onclick="window.location.href = '/quiz/pop';">
-                    <h1 class=" quiz_name">
-                        Pop-Culture Quiz
-                    </h1>
-                </button>
-            </div>
-            <div class="quiz_3">
-                <button onclick="window.location.href = '/quiz/food';">
-                    <h1 class=" quiz_name">
-                        Food Quiz
-                    </h1>
-                </button>
-            </div>
-            <div class="quiz_4">
-                <button onclick="window.location.href = '/quiz/rec';">
-                    <h1 class=" quiz_name">
-                        Recommendation Quiz
-                    </h1>
-                </button>
+                <div class="quiz_1">
+                    <button onclick="window.location.href = '/quiz/language';">
+                        <h1 class=" quiz_name">
+                            Language Quiz
+                        </h1>
+                    </button>
+                </div>
+                <div class="quiz_2">
+                    <button onclick="window.location.href = '/quiz/pop';">
+                        <h1 class=" quiz_name">
+                            Pop-Culture Quiz
+                        </h1>
+                    </button>
+                </div>
+                <div class="quiz_3">
+                    <button onclick="window.location.href = '/quiz/food';">
+                        <h1 class=" quiz_name">
+                            Food Quiz
+                        </h1>
+                    </button>
+                </div>
+                <div class="quiz_4">
+                    <button onclick="window.location.href = '/quiz/rec';">
+                        <h1 class=" quiz_name">
+                            Recommendation Quiz
+                        </h1>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
-
 </body>
 
 
