--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Welcome</title>
 
-    <!-- Google Fonts -->
-<!--    <link-->
-<!--      href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap"-->
-<!--      rel="stylesheet"-->
-<!--    />-->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Welcome</title>
+  <link rel="stylesheet" href="../Settler - Presentation/css/main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../static/css/style.css" />
+  <link rel="stylesheet" href="../static/css/welcome.css" />
+  <script src="../static/js/navbar.js"></script>
 
-    <!-- CSS -->
-<!--      <link rel="stylesheet" href="../static/css/style.css" />-->
-    <link rel="stylesheet" href="../static/css/welcome.css" />
+  <script src="https://kit.fontawesome.com/f26da25149.js" crossorigin="anonymous"></script>
+</head>
 
+<body>
+  <!-- 1. Navigation / Header Bar -->
 
-    <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/f26da25149.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-
-  <body>
-    <!-- 1. Navigation / Header Bar -->
-
-    <div class="container">
-      <nav class="nav-header">
-        <div class="header">
-            
-        <div class="nav-list ">
-          <img class="logo_img"  src="../static/images/Setteler Logo.png" alt="settler logo"/>
-          <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
-          <a class="nav-links" href="https://www.apple.com/ipad/" target="_blank">About</a>
-          <a class="nav-links" href="https://www.apple.com/iphone/" target="_blank">Forum</a>
-          <a class="nav-links" href="https://www.apple.com/watch/" target="_blank">FAQ</a>
-          <a class="nav-links" href="https://www.apple.com/tv/" target="_blank">Contact</a>
-        </div>
-      </nav>
-
-      <div class="stripe stripe1">
-        <div>
-          <h1 class="stripe1_header header">Settler</h1>
-          <h2 class="stripe1_subheader">Your home away from home...</h2>
-        </div>
-        <div class="stripe1_links_container">
-          <a class="stripe1_links" href="#">Learn more </a>
-        </div>
+  <div class="container">
+    <nav>
+      <div class="logo">
+        <img class="logo_img2" src="../static/images/logo.png    " alt="settler logo">
       </div>
+      <div class="topnav">
+        <a href="#home" class="active">Menu</a>
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+    </nav>
+    <div class="content">
 
 
       <!-- split box block -->
@@ -57,20 +44,20 @@
         <!-- 1 Left-->
         <div class="small-container container1 ">
           <button onclick="window.location.href = '/map';" class="box_header_container">
-            <h2 class='box_header'>Useful Locations</h2>
-        
+            <h5 class='boxHeader'>Useful Locations</h5>
+
           </button>
 
-         
+
         </div>
 
         <!-- 2vRight -->
         <div class="small-container container2 ">
-            <button onclick="window.location.href = '/prices';" class="box_header_container">
-                <h2 class='box_header'>Cost of Living</h2>
-            
-              </button>
-         
+          <button onclick="window.location.href = '/prices';" class="box_header_container">
+            <h5 class='boxHeader'>Cost of Living</h5>
+
+          </button>
+
         </div>
       </div>
 
@@ -78,59 +65,60 @@
       <div class="split_box ">
         <!-- 3-Left -->
         <div class="small-container container3 ">
-            <button onclick="window.location.href = '/meal';" class="box_header_container">
-                <h2 class='box_header'>Meal Hosting</h2>
-            
-              </button>
+          <button onclick="window.location.href = '/meal';" class="box_header_container">
+            <h5 class='boxHeader'>Meal Hosting</h5>
 
-          
+          </button>
+
+
         </div>
         <!-- 4-Right -->
         <div class="small-container container4 ">
-            <button onclick="window.location.href = '/apps';" class="box_header_container">
-                <h2 class='box_header'>Useful Apps</h2>
-            
-              </button>
-          
+          <button onclick="window.location.href = '/apps';" class="box_header_container">
+            <h5 class='boxHeader'>Useful Apps</h5>
+
+          </button>
+
         </div>
       </div>
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container5 ">
-            <button onclick="window.location.href = '/quiz';" class="box_header_container">
-                <h2 class='box_header'>Take a Quiz</h2>
-            
-              </button>
-          
+          <button onclick="window.location.href = '/quiz';" class="box_header_container">
+            <h5 class='boxHeader'>Take a Quiz</h5>
+
+          </button>
+
         </div>
         <!-- 6-Right -->
         <div class="small-container container6 ">
-            <button onclick="window.location.href = '/info';" class="box_header_container">
-                <h2 class='box_header'>Government Information</h2>
-            
-              </button>
-          
+          <button onclick="window.location.href = '/info';" class="box_header_container">
+            <h5 class='boxHeader'>Government Information</h5>
+
+          </button>
+
         </div>
       </div>
 
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container7 ">
-            <button onclick="window.location.href = '/transportation';" class="box_header_container">
-                <h2 class='box_header'>Transportation Information</h2>
-            
-            </button>
+          <button onclick="window.location.href = '/transportation';" class="box_header_container">
+            <h5 class='boxHeader'>Transportation Information</h5>
+
+          </button>
 
         </div>
         <!-- 6-Right -->
         <div class="small-container container8 ">
-            <button onclick="window.location.href = '/activities';"class="box_header_container">
-                <h2 class='box_header'>Activities</h2>
-              </button>
-          </div>
+          <button onclick="window.location.href = '/activities';" class="box_header_container">
+            <h5 class='boxHeader'>Activities</h5>
+          </button>
         </div>
       </div>
-      
     </div>
-  </body>
+  </div>
+
+</body>
+
 </html>
