--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,22 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Welcome</title>
 
-    <!-- Google Fonts -->
-<!--    <link-->
-<!--      href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap"-->
-<!--      rel="stylesheet"-->
-<!--    />-->
-
-    <!-- CSS -->
-<!--      <link rel="stylesheet" href="../static/css/style.css" />-->
     <link rel="stylesheet" href="../static/css/welcome.css" />
 
 
     <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/f26da25149.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/f26da25149.js" crossorigin="anonymous" ></script>
   </head>
 
   <body>
@@ -41,14 +30,12 @@
         </div>
       </nav>
 
-      <div class="stripe stripe1">
-        <div>
+      <div class="stripe">
+        <div class="header_container">
           <h1 class="stripe1_header header">Settler</h1>
-          <h2 class="stripe1_subheader">Your home away from home...</h2>
+          <!-- <h3 class="stripe1_subheader">Your home away from home...</h3> -->
         </div>
-        <div class="stripe1_links_container">
-          <a class="stripe1_links" href="#">Learn more </a>
-        </div>
+      
       </div>
 
 
