--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -7,8 +7,8 @@ body {
 }
 
 .logo_img {
-  height: 60px;
-  width: 60px;
+  height: 30px;
+  width: 40px;
 }
 
 .nav-list {
@@ -66,7 +66,7 @@ body {
     
 }
 .container4{
-    background-image: url("https://i2.wp.com/www.mobileworldlive.com/wp-content/uploads/2019/05/social-media-apps-2-shutterstock-650-e1576686057538.jpg?fit=650%2C399&ssl=1");
+    background-image: url("https://venturebeat.com/wp-content/uploads/2018/05/screen-shot-2018-05-18-at-2-16-04-pm.jpg?fit=400%2C190&strip=all");
     
 }
 .container5{
@@ -94,38 +94,72 @@ body {
     
 }
 
-.stripe{
-    
+.stripe {
     height: 300px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
-    background-position-x: 20px ;
+    justify-content: flex-end;
+    background-position-x: 20px;
     background-size: 300px 300px;
     background-repeat: no-repeat;
-}
-
-.stripe1{
-    background-image: url("https://i1.wp.com/ips-dc.org/wp-content/uploads/2019/09/immigration.jpg?resize=1080%2C675&ssl=1");
+    background-image: url(https://i1.wp.com/ips-dc.org/wp-content/uploads/2019/09/immigration.jpg?resize=1080%2C675&ssl=1);
     background-position: center;
-    background-size: 80% 100%;
-    color: red;
-
-}
+    background-size: 75% 90%;
+    background-position-y: bottom;
+    color: black;}
 
 .box_header_container{
     height:50px;
     width: 300px;
-    background-color: white;
+    background-color: black;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 3px solid blue;
+    border-radius: 50%;
 }
 
 .box_header{
     text-align: center;
-    color: black;
+    color: white;
 }
+
+.nav-header {
+    background-color:rgba(0,0,0,0.8);
+    border: 1px solid rgba(0,0,0,0.8);
+    font-size: 0.9rem;
+    padding: 15px 0;
+    position: fixed;         
+    right: 0;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    height: 25px;
+}
+
+
+.nav-links {
+    margin: 0px 20px;
+    text-decoration: none;
+    color: white;     
+}
+
+.header_container{
+    height: 160px
+}
+
+.stripe1_header{
+    /* color: #e0dfdc;
+background: #556677;
+letter-spacing: .1em;
+text-shadow: 0 -1px 0 #fff, 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c, 0 3px 0 #2a2a2a, 0 4px 0 #282828, 0 5px 0 #262626, 0 6px 0 #242424, 0 7px 0 #222, 0 8px 0 #202020, 0 9px 0 #1e1e1e, 0 10px 0 #1c1c1c, 0 11px 0 #1a1a1a, 0 12px 0 #181818, 0 13px 0 #161616, 0 14px 0 #141414, 0 15px 0 #121212, 0 22px 30px rgba(0,0,0,0.9);
+}*/
+
+font-family: 'Dancing Script', cursive;
+	font-size: 80px;
+    margin-bottom: 30px; }
+    
 
