--- a/templates/quizFood.html
+++ b/templates/quizFood.html
@@ -20,9 +20,9 @@
             <div class="topnav">
                 <a href="#home" class="active">Menu</a>
                 <div id="myLinks">
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
+                    <a href="/about">About</a>
+                    <a href="/faq">FAQ</a>
+                    <a href="/contacts">Contacts</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
