--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -38,11 +38,11 @@
     </nav>
     <div class="content">
 
-<div class="stripe">
-<h1>Your home away from home</h1>
+      <div class="stripe">
+        <h1>Your Home Away From Home</h1>
 
 
-</div>
+      </div>
       <!-- split box block -->
       <div class="split_box">
         <!-- 1 Left-->
