--- a/templates/prices.html
+++ b/templates/prices.html
@@ -126,20 +126,20 @@
             <th>Average Price</th>
           </tr>
           <tr>
-            <td>📚 ID/Passport Renewal</td>
-            <td>2</td>
+            <td>📚 Passport Renewal</td>
+            <td>265 ₪ </td>
           </tr>
           <tr>
             <td>💳 Driving License</td>
-            <td>2</td>
+            <td>450 ₪ </td>
           </tr>
           <tr>
             <td>🗣️ Language Courses (ulpan)</td>
-            <td>2</td>
+            <td>2500 ₪ </td>
           </tr>
           <tr>
             <td>🎫 Parking Ticket</td>
-            <td>2</td>
+            <td>500 ₪</td>
           </tr>
         </table>
 
@@ -151,23 +151,23 @@
           </tr>
           <tr>
             <td>🍿 Movie Theater</td>
-            <td>2</td>
+            <td>40 ₪</td>
           </tr>
           <tr>
             <td>💃 Dance Club</td>
-            <td>2</td>
+            <td>50 ₪</td>
           </tr>
           <tr>
             <td>🏋️‍♂️ Gym Membership</td>
-            <td>2</td>
+            <td>175 ₪</td>
           </tr>
           <tr>
             <td>🍽️ Restaurant</td>
-            <td>2</td>
+            <td>50 ₪</td>
           </tr>
           <tr>
             <td>💸 Tip</td>
-            <td>2</td>
+            <td>10%</td>
           </tr>
         </table>
       </div>
@@ -180,27 +180,27 @@
           </tr>
           <tr>
             <td>👖 Pants</td>
-            <td>2</td>
+            <td>130 ₪</td>
           </tr>
           <tr>
             <td>👞 Shoes</td>
-            <td>2</td>
+            <td>360 ₪</td>
           </tr>
           <tr>
             <td>👕 T-Shirt</td>
-            <td>2</td>
+            <td>120 ₪</td>
           </tr>
           <tr>
             <td>🧼 Deodorant</td>
-            <td>2</td>
+            <td>28.20 ₪</td>
           </tr>
           <tr>
             <td>🦷 Toothpaste</td>
-            <td>2</td>
+            <td>28.80 ₪</td>
           </tr>
           <tr>
             <td>💍 Jewelery</td>
-            <td>2</td>
+            <td>360 ₪</td>
           </tr>
         </table>
 
@@ -213,31 +213,31 @@
           </tr>
           <tr>
             <td>📺 TV</td>
-            <td>2</td>
+            <td>1820 ₪</td>
           </tr>
           <tr>
             <td>💻 Computer</td>
-            <td>2</td>
+            <td>3690 ₪</td>
           </tr>
           <tr>
             <td>📱 Cellphone</td>
-            <td>2</td>
+            <td>529 ₪</td>
           </tr>
           <tr>
             <td>🗄️ Washing Machine</td>
-            <td>2</td>
+            <td>799 ₪</td>
           </tr>
           <tr>
             <td>🧃 Refrigerator</td>
-            <td>2</td>
+            <td>679 ₪</td>
           </tr>
           <tr>
             <td>🛋️ Couch</td>
-            <td>2</td>
+            <td>999 ₪</td>
           </tr>
           <tr>
             <td>🛏️ Bed</td>
-            <td>2</td>
+            <td>555 ₪</td>
           </tr>
         </table>
       </div>
