show shard meal in listings.html

--- a/templates/listings.html
+++ b/templates/listings.html
@@ -49,10 +49,10 @@
                     <td class="id">{{host.id}}</td>
                     <td class="first_name_data">{{host.first_name}}</td>
                     <td class="last_name_data">{{host.last_name}}</td>
-                    <td class="adress data">{{host.address}}</td>
+                    <td class="address data">{{host.address}}</td>
                     <td class="guest_number data">{{host.guest_number}}</td>
                     <td class="meal_type data">{{host.meal_type}}</td>
-                    <td class="food_restriction data">{{host.food_restriction}}</td>
+                    <td class="food_restriction data">{{host.meal_preference}}</td>
                     <td class="meal_date data">{{host.meal_date}}</td>
                     <td class="meal_time data">{{host.meal_time}}</td>
                     <td class="join data"><button>Join</button></td>
