--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,31 +29,31 @@
 
                 <div class="formBox">
                     <div class="formItem">
-                        <h4>Username:</h4>
+                        <h4 class="formTitles">Username:</h4>
                         <input class="inputBox" type="text" name="username" />
                     </div>
                     <div class="formItem">
-                        <h4>First Name:</h4>
+                        <h4 class="formTitles">First Name:</h4>
                         <input class="inputBox" type="text" name="first_name" />
                     </div>
                     <div class="formItem">
-                        <h4>Last Name:</h4>
+                        <h4 class="formTitles">Last Name:</h4>
                         <input class="inputBox" type="text" name="last_name" />
                     </div>
                     <div class="formItem">
-                        <h4>Date of Birth</h4>
+                        <h4 class="formTitles">Date of Birth</h4>
                         <input class="inputBox" type="text" name="bday">
                     </div>
                     <div class="formItem">
-                        <h4>Country of Origin:</h4>
+                        <h4 class="formTitles">Country of Origin:</h4>
                         <input class="inputBox" type="text" name="country_of_origin" /></br>
                     </div>
                     <div class="formItem">
-                        <h4>City of Residence:</h4>
+                        <h4 class="formTitles">City of Residence:</h4>
                         <input class="inputBox" type="text" name="city_of_residence" />
                     </div>
                     <div class="formItem">
-                        <h4>Address:</h4>
+                        <h4 class="formTitles">Address:</h4>
                         <input class="inputBox" type="text" name="address" />
                     </div>
                     <input class="submitButton" type="submit">
