--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,16 +27,15 @@ h1 {
   -o-background-size: cover;
   background-size: cover;
   width: 100vw;
-  height: 98vh;
+  height: 100vh;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: column;
   align-items: center;
   padding: 1px;
- 
 }
 
-.content{
+.content {
   margin-top: 18vh;
 }
 
@@ -81,7 +80,7 @@ h1 {
   justify-content: start;
 }
 
-.logo_img2{
+.logo_img2 {
   display: flex;
   height: auto;
   width: 30vw;
@@ -110,12 +109,12 @@ footer {
   align-items: center;
 }
 
-.footer_text{
+.footer_text {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
 }
 
-.footer_img{
+.footer_img {
   width: 20vw;
 }
 
@@ -143,11 +142,10 @@ footer {
 }
 .sign :hover {
   opacity: 1;
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
-
 
 .stripe {
   display: flex;
@@ -160,11 +158,9 @@ footer {
   border: 1px solid;
 }
 
-
-.fyrebox_quiz{
+.fyrebox_quiz {
   z-index: 100;
 }
-
 
 nav {
   display: flex;
@@ -189,7 +185,6 @@ nav {
   border-radius: 25px;
   margin-right: 1vw;
   align-self: center;
-
 }
 
 .topnav #myLinks {
@@ -222,4 +217,16 @@ nav {
   color: white;
 }
 
+#google_translate_element {
+  position: fixed;
+  right: 20%;
+  top: 1px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1px;
+}
 
+.goog-te-gadget .goog-te-combo {
+  margin: 0 !important;
+  padding: 0px !important;
+  height: 20px !important;
+}
