--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
         </script>
 
         <script type="text/javascript"
-            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+            </script>
 
         <div class="header">
             <div class="logo">
