--- a/static/css/style.css
+++ b/static/css/style.css
@@ -219,8 +219,8 @@ nav {
 
 #google_translate_element {
   position: fixed;
-  right: 20%;
-  top: 1px;
+  right: 48%;
+  bottom: 1px;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 1px;
 }
