--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -61,9 +61,9 @@
         <!-- 2vRight -->
         <div class="small-container container2 ">
           <button onclick="window.location.href = '/prices';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/2491891.svg" alt="">
             <h5 class='boxHeader'>Cost of Living</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/2491891.svg" alt="">
           </button>
 
         </div>
@@ -74,9 +74,9 @@
         <!-- 3-Left -->
         <div class="small-container container3 ">
           <button onclick="window.location.href = '/meal';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/2478559.svg" alt="">
             <h5 class='boxHeader'>Meal Hosting</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/2478559.svg" alt="">
           </button>
 
 
@@ -84,9 +84,9 @@
         <!-- 4-Right -->
         <div class="small-container container4 ">
           <button onclick="window.location.href = '/apps';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/831276.svg" alt="">
             <h5 class='boxHeader'>Useful Apps</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/831276.svg" alt="">
           </button>
 
         </div>
@@ -95,18 +95,18 @@
         <!-- 5-Left -->
         <div class="small-container container5 ">
           <button onclick="window.location.href = '/quiz';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/1739448.svg" alt="">
             <h5 class='boxHeader'>Take a Quiz</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/1739448.svg" alt="">
           </button>
 
         </div>
         <!-- 6-Right -->
         <div class="small-container container6 ">
           <button onclick="window.location.href = '/government';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/414783.svg" alt="">
             <h5 class='boxHeader'>Government Information</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/414783.svg" alt="">
           </button>
 
         </div>
@@ -116,18 +116,18 @@
         <!-- 5-Left -->
         <div class="small-container container7 ">
           <button onclick="window.location.href = '/transportation';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/1064722.svg" alt="">
             <h5 class='boxHeader'>Transportation Information</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/1064722.svg" alt="">
           </button>
 
         </div>
         <!-- 6-Right -->
         <div class="small-container container8 ">
           <button onclick="window.location.href = '/activities';" class="box_header_container">
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/2471842.svg" alt="">
             <h5 class='boxHeader'>Activities</h5>
-            <img class="tiny_logo" src="../static/images/149060.svg" alt="">
+            <img class="tiny_logo" src="../static/images/2471842.svg" alt="">
           </button>
         </div>
       </div>
