--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -32,6 +32,42 @@
 
         </nav>
         <div class="content">
+            <table class="cinereousTable">
+                <thead>
+                <tr>
+                <th>Contacts</th>
+                <th>Number</th>
+                </tr>
+                </thead>
+                <tfoot>
+                </tfoot>
+                <tbody>
+                <tr>
+                <td>Police</td>
+                <td>100</td>
+                </tr>
+                <tr>
+                <td>Ambulance</td>
+                <td>101</td>
+                </tr>
+                <tr>
+                <td>Fire Department</td>
+                <td>102</td>
+                </tr>
+                <tr>
+                <td>Electric Company</td>
+                <td>103</td>
+                </tr>
+                <tr>
+                <td>Municipality</td>
+                <td>106</td>
+                </tr>
+                <tr>
+                    <td>Bezeq Phone/Internet</td>
+                    <td>199</td>
+                    </tr>
+                </tbody>
+                </table>
 
 
 
